# ClaudeDesktopGatewayProxy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.bat  build.sh  gen_icon.py  index.html  package.json  start.bat  start.sh  tailwind.config.js  trust-gateway.sh
.codeartsdoer/complex_code_task/expertises/: metadata.properties
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  tray.rs
src-tauri/src/proxy/: handler.rs  mod.rs
src/components/: BasicSettings.tsx  GuidePanel.tsx  Header.tsx  LogViewer.tsx  ProviderEditor.tsx  ProviderList.tsx  SettingsPanel.tsx  SplitPane.tsx  ToastContainer.tsx
