[package]
name = "ClaudeDesktopGatewayProxy"
version = "1.0.0"
description = "Multi-provider AI API gateway proxy for Claude Desktop"
authors = ["Cowork 3P"]
edition = "2021"
license = "MIT"

[lib]
name = "gateway_proxy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
http-body = "1"
bytes = "1"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
image = { version = "0.25", features = ["png"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
